ant-demo/codepkg/objects/Healthcare_Quote_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Health_Care_Quote_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Health Care Quote ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <label>Quote ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <label>Quote Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <label>Quote Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Healthcare Quote Staging</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Healthcare Quote Staging__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Healthcare Quote Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>